--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 105 AGENDA (2028 Cohort)</title>
+        <title>GDWD 105 AGENDA (2027 Cohort)</title>
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 10th</h1>
-            <h3>Week 27 Day 5 (Career Services Week)</h3>
+            <h1>GDWD 108 - Agenda for March 11th</h1>
+            <h3>Week 37 Day 4 (Career Services and Adobe Portfolio)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Which of your remaining classes are you most excited 
-                            for: Motion Graphics (106), Layout Design and Print (107), or
-                            the Portfolio course (108)?
+                            What was your favorite project that you've done so 
+                            far in the program?
                         </li>
                     </ul>
-                    <div class="img-container more-space final-black">
+                    <div class="img-container final-black">
                         <img 
-                            src="images/finalday.jpg"
+                            src="images/painter-fox.jpg"
                             alt="final day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>Career Services Week Wrap Up</li>
-                        <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
+                        <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Checkpoint)</li>
+                    </ul>
                 </div>
 
                 <div id="agenda">
@@ -37,25 +36,21 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Announcement</span>Student Catalog Changes</li>
-                            <li><span class="type">Survey</span>Career Services Week Wrap Up</li>
-                            <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
+                            <li><span class="type">PowerPoint</span>Introduction to Adobe Portfolio</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Branded Resume - Complete (CS) [cont.]</li>
-                            <li><span class="type">Demo</span>JavaScript Countdown</li>
+                            <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Checkpoint)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-1:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Branded Resume - Complete (CS) [cont.]</li>
-                            <li><span class="type">Demo</span>JavaScript Countdown [cont.]</li>
+                            <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Checkpoint) [cont.]</li>
                         </ul>
                     </div>
                 </div>
