--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 105 AGENDA (2027 Cohort)</title>
+        <title>GDWD 108 AGENDA (2027 Cohort)</title>
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for March 11th</h1>
-            <h3>Week 37 Day 4 (Career Services and Adobe Portfolio)</h3>
+            <h1>GDWD 108 - Agenda for March 12th</h1>
+            <h3>Week 37 Day 5 (Career Services and Adobe Portfolio)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>
-                            What was your favorite project that you've done so 
-                            far in the program?
-                        </li>
+                        <li>What is your go-to comfort food?</li>
+
+
                     </ul>
-                    <div class="img-container final-black">
+                    <div class="img-container">
                         <img 
-                            src="images/painter-fox.jpg"
-                            alt="final day"
+                            src="images/feelingsnacky.jpg"
+                            alt="feeling snacky"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Checkpoint)</li>
+                        <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Final)</li>
                     </ul>
                 </div>
 
@@ -36,21 +35,21 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Introduction to Adobe Portfolio</li>
+                            <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Final)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Checkpoint)</li>
+                            <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Final) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-1:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Checkpoint) [cont.]</li>
+                            <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Final) [cont.]</li>
                         </ul>
                     </div>
                 </div>
