--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -26,7 +26,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Final)</li>
+                        <li><span class="type">Project</span>Adobe Portfolio Foundation (Final)</li>
                     </ul>
                 </div>
 
@@ -35,21 +35,21 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Final)</li>
+                            <li><span class="type">Project</span>Adobe Portfolio Foundation (Final)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Final) [cont.]</li>
+                            <li><span class="type">Project</span>Adobe Portfolio Foundation (Final) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
-                        <h3>Period 3 (12:45pm-1:30pm)</h3>
+                        <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Adobe Portfolio Foundation (Final) [cont.]</li>
+                            <li><span class="type">Project</span>Adobe Portfolio Foundation (Final) [cont.]</li>
                         </ul>
                     </div>
                 </div>
