--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,23 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for March 12th</h1>
-            <h3>Week 37 Day 5 (Career Services and Adobe Portfolio)</h3>
+            <h1>GDWD 108 - Agenda for March 13th</h1>
+            <h3>Week 38 Day 1 (Portfolio Projects Week 1)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your go-to comfort food?</li>
-
-
+                        <li>What is your favorite restaurant?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-red">
                         <img 
-                            src="images/feelingsnacky.jpg"
-                            alt="feeling snacky"
+                            src="images/pho-fox.webp"
+                            alt="pho-fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Adobe Portfolio Foundation (Final)</li>
+                        <li><span class="type">Exercise</span>Week 1 Project Selection Discussion</li>
                     </ul>
                 </div>
 
@@ -35,21 +33,21 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Adobe Portfolio Foundation (Final)</li>
+                            <li><span class="type">Exercise</span>Week 1 Project Selection Discussion</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Adobe Portfolio Foundation (Final) [cont.]</li>
+                            <li><span class="type">Presentation</span>108 Project Submission Guidelines</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Adobe Portfolio Foundation (Final) [cont.]</li>
+                            <li><span class="type">Lab Time</span>Project #1</li>
                         </ul>
                     </div>
                 </div>
