--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -47,7 +47,7 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Project #1</li>
+                            <li><span class="type">Lab Time</span>Process Post Template</li>
                         </ul>
                     </div>
                 </div>
