--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 105 AGENDA (6021 Cohort)</title>
+        <title>GDWD 105 AGENDA (6025 Cohort)</title>
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for October 4th, 2024</h1>
-            <h3>Week 27 Day 5 (Career Development)</h3>
+            <h1>GDWD 105 - Agenda for March 17th</h1>
+            <h3>Week 19 Day 1 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            How do you feel about coding and web design
-                            now that the class is over?
+                            How do you feel about the idea of coding?
                         </li>
                     </ul>
-                    <div class="img-container more-space final-black">
+                    <div class="img-container ">
                         <img 
-                            src="images/finalday.jpg"
-                            alt="final day"
+                            src="images/anxious.webp"
+                            alt="things that make me anxious"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Freelancing I: Proposals</li>
-                        <li><span class="type">Project</span>Freelancing II: Invoices</li>
+                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                        <li><span class="type">Exercise</span>My First Blog Post</li>
                     </ul>
                 </div>
 
@@ -37,24 +36,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Director Visit</span>105 End of Course Survey</li>
-                            <li><span class="type">PowerPoint</span>Freelancing & Invoicing</li>
+                            <li><span class="type">Resources</span>Course Overview and Policies</li>
+                            <li><span class="type">PowerPoint</span>Intro to CMS</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">PowerPoint</span>Freelancing & Invoicing [cont.]</li>
-                            <li><span class="type">Project</span>Freelancing I: Proposals</li>
+                            <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                            <li><span class="type">Demo</span>Intro to WordPress</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Freelancing I: Proposals [cont.]</li>
-                            <li><span class="type">Project</span>Freelancing II: Invoices</li>
+                            <li><span class="type">Demo</span>Intro to WordPress (cont.)</li>
+                            <li><span class="type">Exercise</span>My First Blog Post</li>
                         </ul>
                     </div>
                 </div>
