--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 17th</h1>
-            <h3>Week 19 Day 1 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for March 18th</h1>
+            <h3>Week 19 Day 2 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            How do you feel about the idea of coding?
+                            Are you an early bird, or a night owl?
                         </li>
                     </ul>
-                    <div class="img-container ">
+                    <div class="img-container more-space light-gray">
                         <img 
-                            src="images/anxious.webp"
-                            alt="things that make me anxious"
+                            src="images/night-owl.webp"
+                            alt="night owl"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                        <li><span class="type">Exercise</span>Using the Coding Cookbook 1</li>
                         <li><span class="type">Exercise</span>My First Blog Post</li>
+                        <li><span class="type">Exercise</span>Replicating Raycon</li>
                     </ul>
                 </div>
 
@@ -36,24 +37,25 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Resources</span>Course Overview and Policies</li>
-                            <li><span class="type">PowerPoint</span>Intro to CMS</li>
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 1</li>
+                            <li><span class="type">Demo</span>Intro to WordPress [cont.]</li>
+                            <li><span class="type">Exercise</span>My First Blog Post</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
-                            <li><span class="type">Demo</span>Intro to WordPress</li>
+                            <li><span class="type">Exercise</span>My First Blog Post [cont.]</li>
+                            <li><span class="type">Demo</span>Custom Navbars (Menus)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Intro to WordPress (cont.)</li>
-                            <li><span class="type">Exercise</span>My First Blog Post</li>
+                            <li><span class="type">Demo</span>Side by Side Layouts</li>
+                            <li><span class="type">Exercise</span>Replicating Raycon</li>
                         </ul>
                     </div>
                 </div>
