web dev flow update

--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -270,7 +270,7 @@
                             <p>
                                 This extension will allow you 
                                 to preview your HTML/CSS/Javascript
-                                code within Visual Studio.
+                                code within Visual Studio AND your browser.
                             </p>
                         </div>
                         <div class="imageContainer">
@@ -283,35 +283,7 @@
                             </figcaption>
                         </div>
                     </div>
-                    <div class="sideBySide">
-                        <div class="textContainer">
-                            <p>
-                                In the Extensions tab, click in the 
-                                search bar at the top. Then in the
-                                search bar, type "live server". 
-                            </p>
-                            <p>
-                                The extension Live Server by Ritwick
-                                Dey should be one of the first in 
-                                the list. Click the Install button
-                                to install the extension
-                            </p>
-                            <p>
-                                This extension will allow you to 
-                                preview your HTML/CSS/Javascript
-                                code live in a web browser like Google Chrome.
-                            </p>
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/web-dev-startup/liveserver.png" 
-                                alt="A screenshot of the Live Server extension" 
-                            />
-                            <figcaption>
-                                A screenshot of the Live Server extension
-                            </figcaption>
-                        </div>
-                    </div>
+                    
                 </li>
                 <li>
                     <div class="sideBySide">
@@ -399,10 +371,14 @@
                                 </a>
                                 and click the Sign up button in the top right.
                             </p>
+                            <p>
+                                Or, fill out your email address and click the 
+                                green Sign up for GitHub.
+                            </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/web-dev-startup/githubhomepage_withCircle.png" 
+                                src="images/web-dev-startup/GitHub_new_homepage.png" 
                                 alt="The home page of GitHub" 
                             >
                             <figcaption>The home page of GitHub</figcaption>
@@ -413,8 +389,8 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                On the next page, enter the email address you 
-                                want to associate with your GitHub account.
+                                On the next page, fill out the information you
+                                need to create your GitHub account.
                             </p>
                             <p class="indent">
                                 You can change your associated email later if 
@@ -426,7 +402,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/web-dev-startup/02_email.png"
+                                src="images/web-dev-startup/Github_new_login.png"
                                 alt="Entering email during GitHub account setup" 
                             >
                             <figcaption>
@@ -439,139 +415,7 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                The page will update and prompt you to submit
-                                a password for your account; go ahead and do so.
-                            </p>
-                            <p>
-                                Then click the Continue button.
-                            </p>
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/web-dev-startup/03_password.png"
-                                alt="Entering password during GitHub account setup" 
-                            >
-                            <figcaption>
-                                Entering password during GitHub account setup
-                            </figcaption>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="sideBySide">
-                        <div class="textContainer">
-                            <p>
-                                The page will update again and prompt you to 
-                                submit a username for your account; go ahead 
-                                and do so.
-                            </p>
-                            <p>
-                                <strong>
-                                    NOTE: Your username will be publicly 
-                                    viewable, and will also be
-                                    included in the URL for your website, 
-                                    so make sure to pick something
-                                    you're comfortable sharing with the world!
-                                </strong>
-                            </p>
-                            <p>
-                                Then click the Continue button.
-                            </p>
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/web-dev-startup/04_username.png"
-                                alt="Entering username during GitHub account setup" 
-                            >
-                            <figcaption>
-                                Entering username during GitHub account setup
-                            </figcaption>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="sideBySide">
-                        <div class="textContainer">
-                            <p>
-                                The page will update again and ask if you want 
-                                to receive product updates related to GitHub.
-                            </p>
-                            <p>
-                                We recommend typing "n" to decline, but if you 
-                                are interested in getting emails from GitHub,
-                                feel free to type "y".
-                            </p>
-                            <p>
-                                Then click the Continue button.
-                            </p>
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/web-dev-startup/05_productupdates.png"
-                                alt="Entering your product update response during GitHub account setup" 
-                            >
-                            <figcaption>
-                                Entering your product update response 
-                                during GitHub account setup
-                            </figcaption>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="sideBySide">
-                        <div class="textContainer">
-                            <p>
-                                The page will update AGAIN and prompt you to 
-                                prove that you're a human and not a robot, by 
-                                having you complete a little puzzle.
-                            </p>
-                            <p class="indent">
-                                You have a choice of completing a visual puzzle,
-                                or an audio puzzle.
-                            </p>
-                            <p>
-                                Complete the puzzle to continue.
-                            </p>
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/web-dev-startup/06_verify.png"
-                                alt="Proving your a human to GitHub" 
-                            >
-                            <figcaption>
-                                Proving your a human to GitHub
-                            </figcaption>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="sideBySide">
-                        <div class="textContainer">
-                            <p>
-                                After completing the puzzle, a button will 
-                                appear at the bottom, which will allow you to
-                                finally create your account.
-                            </p>
-                            <p>
-                                Click the "Create account" button to continue.
-                            </p>
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/web-dev-startup/07_create.png"
-                                alt="Clicking the Create Account button" 
-                            >
-                            <figcaption>
-                                Clicking the Create Account button
-                            </figcaption>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="sideBySide">
-                        <div class="textContainer">
-                            <p>
-                                After clicking the Create Account button, 
+                                After creating your account, 
                                 GitHub will send an email to the address you 
                                 specified with a "launch code". You'll need 
                                 to go into your email to retrieve it.
@@ -589,13 +433,6 @@
                             <figcaption>
                                 The email from GitHub with your "launch code"
                             </figcaption>
-                            <img 
-                                src="images/web-dev-startup/08_launch.png"
-                                alt="Clicking the Create Account button" 
-                            >
-                            <figcaption>
-                                Where to input the "launch code" on GitHub
-                            </figcaption>
                         </div>
                     </div>
                 </li>
@@ -603,8 +440,9 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                Then you'll be brought to a page to 
-                                personalize your GitHub account.
+                                You may be brought to a page to customize your 
+                                account (which probably looks different from the 
+                                screenshot to the right).
                             </p>
                             <p>
                                 This can be skipped entirely by clicking 
@@ -612,8 +450,7 @@
                                 (which we encourage you to do).
                             </p>
                             <p>
-                                Then you'll get a fun "launch" animation, 
-                                before being brought to your Dashboard.
+                                Then you'll be brought to your Dashboard.
                             </p>
                         </div>
                         <div class="imageContainer">
@@ -872,6 +709,32 @@
                                 GitHub Desktop download site
                             </figcaption>
                         </div>
+                    </div>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                If you're on a Mac, once your software downloads, 
+                                unzip and drag it to your
+                                Applications folder.
+                            </p>
+                            <p class="indent">
+                                This will make it 
+                                easier to find in your Launchpad, and will also
+                                set it up properly to interact with the other
+                                application we'll be installing later.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/vscodeapp.png" 
+                                alt="Move GitHub Desktop from Downloads to Applications"
+                            >
+                            <figcaption>
+                                Move GitHub Desktop from Downloads 
+                                to Applications
+                            </figcaption>
+                        </div>
+                        
                     </div>
                     <div class="sideBySide">
                         <div class="textContainer">
