--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -231,7 +231,7 @@
                                 Now that we have installed the main 
                                 code editor we will be utilizing
                                 throughout class, now we're going to 
-                                install a few extensions that we
+                                install an extension that we
                                 will need for viewing the live renders 
                                 of our code.
                             </p>
