--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 25th</h1>
-            <h3>Week 20 Day 2 (Intro to HTML - Day 2)</h3>
+            <h1>GDWD 105 - Agenda for March 31st</h1>
+            <h3>Week 21 Day 1 (Intro to HTML - LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is your favorite restaurant?</li>
+                        <li>What is one of your favorite TV series/anime?</li>
                     </ul>
-                    <div class="img-container more-space dark-red">
+                    <div class="img-container more-space-offset">
                         <img 
-                            src="images/pho-fox.webp"
-                            alt="pho-fox"
+                            src="images/tv.webp"
+                            alt="tv"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 4</li>
-                        <li><span class="type">Exercise</span>Hello World</li>
-                        <li><span class="type">Exercise</span>Basic HTML Drills (?)</li>
+                        <li><span class="type">Survey</span>Intro to HTML Session Wrap Up</li>
                     </ul>
                 </div>
 
@@ -35,26 +33,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 4</li>
-                            <li><span class="type">PowerPoint</span>Intro to GitHub</li>
-                            <li><span class="type">Exercise</span>Hello World</li>
+                            <li><span class="type">Survey</span>Intro to HTML Session Wrap Up</li>
+                            <li><span class="type">Lab Time</span>Past Assignments</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">PowerPoint</span>HTML Tags and Elements</li>
-                            <li><span class="type">Demo</span>HTML Heading Elements</li>
+                            <li><span class="type">Lab Time</span>HTML Potluck - Other Options</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>HTML Text Styling Elements</li>
-                            <li><span class="type">PowerPoint</span>Clean Code - Part 1 (HTML Tags and Elements)</li>
-                            <li><span class="type">Exercise</span>Basic HTML Drills (?)</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
