--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -48,7 +48,7 @@
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Lab Time</span>Kahoots | Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
