--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,23 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 31st</h1>
-            <h3>Week 21 Day 1 (Intro to HTML - LAB DAY)</h3>
+            <h1>GDWD 105 - Agenda for April 1st</h1>
+            <h3>Week 21 Day 2 (Intro to CSS - Day 1)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is one of your favorite TV series/anime?</li>
+                        <li>What is your favorite color?</li>
                     </ul>
-                    <div class="img-container more-space-offset">
+                    <div class="img-container">
                         <img 
-                            src="images/tv.webp"
-                            alt="tv"
+                            src="images/painter-fox.jpg"
+                            alt="painter fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>Intro to HTML Session Wrap Up</li>
+                        <li><span class="type">Quiz</span>HTML Fundamentals</li>
+                        <li><span class="type">Exercise</span>Basic CSS Drills</li>
+                        <li><span class="type">Exercise</span>Color Palettes (?)</li>
                     </ul>
                 </div>
 
@@ -33,22 +35,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Survey</span>Intro to HTML Session Wrap Up</li>
-                            <li><span class="type">Lab Time</span>Past Assignments</li>
+                            <li><span class="type">Quiz</span>HTML Fundamentals</li>
+                            <li><span class="type">PowerPoints</span>Intro to CSS and CSS Properties</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Lab Time</span>HTML Potluck - Other Options</li>
+                            <li><span class="type">Demo</span>CSS Colors and Text Styling</li>
+                            <li><span class="type">Exercise</span>Basic CSS Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Kahoots | Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Basic CSS Drills [cont.]</li>
+                            <li><span class="type">Exercise</span>Color Palettes</li>
                         </ul>
                     </div>
                 </div>
