adding in document flow

--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -45,6 +45,7 @@
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
+                            <li><span class="type">PowerPoint</span>Document Flow</li>
                             <li><span class="type">Exercise</span>Document Flow Drills</li>
                             <li><span class="type">PowerPoint</span>Box Model</li>
                         </ul>
