--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 3rd</h1>
-            <h3>Week 21 Day 4 (Intro to CSS - Day 3)</h3>
+            <h1>GDWD 105 - Agenda for April 4th</h1>
+            <h3>Week 21 Day 5 (Intro to CSS - Day 4)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>Cats? or Dogs? (or both? or neither?)</li>
+                        <li>Would you prefer a staycation? or a destination vacation?</li>
                     </ul>
-                    <div class="img-container more-space dark-blue-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/cats-vs-dogs.jpeg"
-                            alt="painter fox"
+                            src="images/island-vacation.jpg"
+                            alt="cat on an island turtle"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 8</li>
-                        <li><span class="type">Exercise</span>Document Flow Drills</li>
+                        <li><span class="type">Exercise</span>Using the Coding Cookbook 9</li>
                         <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
+                        <li><span class="type">Exercise</span>Box Model - Border Drills</li>
+                        <li><span class="type">Exercise</span>Upside-down Tetris</li>
+                        <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
                     </ul>
                 </div>
 
@@ -35,27 +37,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 8</li>
-                            <li><span class="type">PowerPoint</span>Clean Code - Part 3 (CSS Rules and Properties)</li>
-                            <li><span class="type">PowerPoint</span>CSS Selectors</li>
-                            
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 9</li>
+                            <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
+                            <li><span class="type">Exercise</span>Box Model - Border Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">PowerPoint</span>Document Flow</li>
-                            <li><span class="type">Exercise</span>Document Flow Drills</li>
-                            <li><span class="type">PowerPoint</span>Box Model</li>
+                            <li><span class="type">Exercise</span>Upside-down Tetris</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Box Model</li>
-                            <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
+                            <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
+                            <li><span class="type">Demo</span>Combining Selectors</li>
                         </ul>
                     </div>
                 </div>
