6025 W22D1 agenda (night) [day behind]

--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,24 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 4th</h1>
-            <h3>Week 21 Day 5 (Intro to CSS - Day 4)</h3>
+            <h1>GDWD 105 - Agenda for April 7th</h1>
+            <h3>Week 22 Day 1 (Intro to CSS - Day 5)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>Would you prefer a staycation? or a destination vacation?</li>
+                        <li>What is one of your favorite ice cream flavors? Any toppings you like to add?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/island-vacation.jpg"
-                            alt="cat on an island turtle"
+                            src="images/icecream-cats.jpg"
+                            alt="lazy sundae"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 9</li>
-                        <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
-                        <li><span class="type">Exercise</span>Box Model - Border Drills</li>
-                        <li><span class="type">Exercise</span>Upside-down Tetris</li>
                         <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
+                        <li><span class="type">Exercise</span>Container and Selectors Drills</li>
                     </ul>
                 </div>
 
@@ -37,24 +34,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 9</li>
-                            <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
-                            <li><span class="type">Exercise</span>Box Model - Border Drills</li>
+                            <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Exercise</span>Upside-down Tetris</li>
+                            <li><span class="type">Demo</span>Combining Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
-                            <li><span class="type">Demo</span>Combining Selectors</li>
+                            <li><span class="type">Demo</span>Combining Selectors [cont.]</li>
+                            <li><span class="type">Exercise</span>Container and Selectors Drills</li>
                         </ul>
                     </div>
                 </div>
