--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -35,6 +35,7 @@
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
                             <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
+                            <li><span class="type">PowerPoint</span>Combining Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
