--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,18 +7,18 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 7th</h1>
-            <h3>Week 22 Day 1 (Intro to CSS - Day 5)</h3>
+            <h1>GDWD 105 - Agenda for April 8th</h1>
+            <h3>Week 22 Day 2 (Intro to CSS - LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is one of your favorite ice cream flavors? Any toppings you like to add?</li>
+                        <li>What is (or was) your favorite breakfast cereal?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/icecream-cats.jpg"
-                            alt="lazy sundae"
+                            src="images/kamehamehos.jpeg"
+                            alt="kamehamehos"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
@@ -34,23 +34,25 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
-                            <li><span class="type">PowerPoint</span>Combining Selectors</li>
+                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
+                            <li><span class="type">Kahoot</span>English to CSS Selectors Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Demo</span>Combining Selectors</li>
+                            <li><span class="type">PowerPoint</span>Responsiveness Part 1</li>
+                            <li><span class="type">Project</span>Box Framing</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Combining Selectors [cont.]</li>
-                            <li><span class="type">Exercise</span>Container and Selectors Drills</li>
+                            <li><span class="type">Project</span>Box Framing [cont.]</li>
+                            <li><span class="type">Survey</span>Intro to CSS Session Wrap Up</li>
+                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
                         </ul>
                     </div>
                 </div>
