--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -23,8 +23,8 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
-                        <li><span class="type">Exercise</span>Container and Selectors Drills</li>
+                        <li><span class="type">Project</span>Box Framing</li>
+                        <li><span class="type">Survey</span>Intro to CSS Session Wrap Up</li>
                     </ul>
                 </div>
 
