--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 8th</h1>
-            <h3>Week 22 Day 2 (Intro to CSS - LAB DAY)</h3>
+            <h1>GDWD 105 - Agenda for April 9th</h1>
+            <h3>Week 22 Day 3 (Page Layouts - Day 1)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is (or was) your favorite breakfast cereal?</li>
+                        <li>What is a hobby you do in your free time?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/kamehamehos.jpeg"
-                            alt="kamehamehos"
+                            src="images/cosplay.jpeg"
+                            alt="cosplay"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Box Framing</li>
-                        <li><span class="type">Survey</span>Intro to CSS Session Wrap Up</li>
+                        <li><span class="type">Quiz</span>CSS Fundamentals</li>
+                        <li><span class="type">Exercise</span>Single Column Layouts Drills</li>
+                        <li><span class="type">Exercise</span>Product Showcase Site (?)</li>
                     </ul>
                 </div>
 
@@ -34,25 +35,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>English to CSS Selectors Review</li>
-                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
+                            <li><span class="type">Quiz</span>CSS Fundamentals</li>
+                            <li><span class="type">PowerPoint</span>Page Layouts - Single Column Layouts</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">PowerPoint</span>Responsiveness Part 1</li>
-                            <li><span class="type">Project</span>Box Framing</li>
+                            <li><span class="type">Demo</span>Single Column Layouts</li>
+
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Box Framing [cont.]</li>
-                            <li><span class="type">Survey</span>Intro to CSS Session Wrap Up</li>
-                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
+                            <li><span class="type">Exercise</span>Single Column Layouts Drills</li>
+                            <li><span class="type">Exercise</span>Product Showcase Site</li>
                         </ul>
                     </div>
                 </div>
