added showcase to agenda

--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -35,6 +35,7 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
+                            <li><span class="type">Showcase</span>Box Framing Project</li>
                             <li><span class="type">Quiz</span>CSS Fundamentals</li>
                             <li><span class="type">PowerPoint</span>Page Layouts - Single Column Layouts</li>
                         </ul>
